Restrict admin actions to admin users (#666)
* admin methods restricted to admin users, tests working

* PR feedback

* darn you linter